--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,6 +128,12 @@ a:after {
 
 /* Helpers */
 
+.st{
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+
 .mt {
 	margin-top: 40px;
 	margin-bottom: 40px;
