--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -218,8 +218,8 @@ img.folio_icon{
 	width: 100%;
 	height: 100%;
 
-	max-width: 200px;
-	max-height: 200px;
+/* 	max-width: 200px;
+	max-height: 200px; */
 	
 }
 
