--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -215,8 +215,8 @@ bt {
 /*Images*/
 
 img.folio_icon{
-	width: 100%;
-	height: 100%;
+/* 	width: 100%;
+	height: 100%; */
 
  	max-width: 600px;
 	max-height: 600px; 
