--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -218,8 +218,8 @@ img.folio_icon{
 /* 	width: 100%;
 	height: 100%; */
 
- 	max-width: 600px;
-	max-height: 600px; 
+/*  	max-width: 600px;
+	max-height: 600px;  */
 	
 }
 
