--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -232,7 +232,7 @@ img.center{
 }
 
 div.portfolio{
-	height:450px
+	height:20%
 }
 
 /* ================== PORTFOLIO IMAGES HOVER EFFECT ================== */
