--- a/form_css.css
+++ b/form_css.css
@@ -29,8 +29,8 @@ p {
     border-radius: 0.5rem;
     box-sizing: border-box;
     width: 80%;
-    margin: 0;
-    padding-bottom: 20px;
+    margin: 20px;
+    padding: 20px;
     position: relative
 }
 
