--- a/form_css.css
+++ b/form_css.css
@@ -106,7 +106,9 @@ p {
 .card {
     z-index: 0;
     border: none;
-    position: relative
+    position: relative;
+    margin: 50px;
+    padding: 50px;
 }
 
 .fs-title {
