--- a/form_css.css
+++ b/form_css.css
@@ -76,7 +76,7 @@ p {
     border: 0 none;
     border-radius: 0px;
     cursor: pointer;
-    padding: 10px 5px;
+    padding: 10px 20px;
     margin: 10px 0px 10px 5px;
     float: right
 }
@@ -128,7 +128,8 @@ p {
     color: gray;
     margin-bottom: 10px;
     font-weight: normal;
-    text-align: right
+    text-align: right;
+    padding-right:20px
 }
 
 .fieldlabels {
